# cpu-3D-renderer

./: .gitignore  CMakeLists.txt
src/: array.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  swap.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
